--- a/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
+++ b/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
@@ -1,6 +1,6 @@
 <sly
 	data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html" />
-<sly data-sly-call="${clientlib.css @ categories='crypto'}" />
+<sly data-sly-call="${clientlib.css @ categories='profit'}" />
 
 <img src="${properties.logo}" alt="bckgound" class="bg" />
 <sly
