--- a/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
+++ b/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
@@ -12,7 +12,7 @@
 <div class="container-content">
 
 	<h1 align="center">
-		<u>Crypto Trade Datails for ${properties.label}</u>
+		<u>Crypto Trade Details for ${properties.label}</u>
 	</h1>
 
 	<table align="center">
