--- a/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
+++ b/CryptoCurrency/ui.apps/src/main/content/jcr_root/apps/CryptoCurrency/components/content/cryptoprofit/cryptoprofit.html
@@ -60,7 +60,7 @@
 	</table>
 
 	<h1>
-		<a href="/content/CryptoCurrency/en/CryptoHome.html">Back</a>
+		<a  class="link" href="/content/CryptoCurrency/en/CryptoHome.html">Back</a>
 	</h1>
 
 </div>
